@@ -6,7 +6,9 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- First step towards fix for: #867 CPSDefault installer should handle l10n
+  properly: some language revisions were created for default roots even if they
+  should not be.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
